2025-01-08T00:59:10Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12662023264 # 534
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-08
* notice: last 14d: unq all: 2 3
* notice: prev accum: outdated-unq outdated-all / unq all: 130 363 / 131 364
* notice: next accum: outdated-unq outdated-all / unq all: 130 363 / 132 366
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2025-01-07]

2025-01-06T01:01:39Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12624599884 # 532
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-06
* notice: last 14d: unq all: 1 1
* notice: prev accum: outdated-unq outdated-all / unq all: 129 356 / 131 364
* notice: next accum: outdated-unq outdated-all / unq all: 130 363 / 131 364
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2024-12-22] / []

2025-01-03T00:58:51Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12591013799 # 529
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-03
* notice: last 14d: unq all: 2 8
* notice: prev accum: outdated-unq outdated-all / unq all: 129 356 / 130 363
* notice: next accum: outdated-unq outdated-all / unq all: 129 356 / 131 364
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2025-01-02]

2024-12-25T00:58:11Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12487765391 # 520