@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2025-01-08T00:59:10Z",
-  "count_outdated" : 363,
-  "uniques_outdated" : 130,
+  "timestamp" : "2025-01-19T01:09:26Z",
+  "count_outdated" : 364,
+  "uniques_outdated" : 131,
   "count" : 366,
   "uniques" : 132,
   "views" : [
-    {
-      "timestamp": "2025-01-02T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2025-01-07T00:00:00Z",
       "count": 2,
