@@ -1,3 +1,12 @@
+2025-01-19T01:09:26Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12849007752 # 539
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-19
+* notice: last 14d: unq all: 1 2
+* notice: prev accum: outdated-unq outdated-all / unq all: 130 363 / 132 366
+* notice: next accum: outdated-unq outdated-all / unq all: 131 364 / 132 366
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2025-01-02] / []
+
 2025-01-08T00:59:10Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/12662023264 # 534
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2025-01-08
